@@ -1,3 +1,12 @@
+2005-08-28  Joerg Wunsch <j@uriah.heep.sax.de>
+
+	* avrdude.conf.in: Add support for the ATtiny25/45/85.  Note that
+	only the ATtiny45 appears to have a complete XML description right
+	now.
+	* avrdude.1: Mention all the recently added device support: AT90PWM2/3,
+	ATmega164/324/644, ATmega329x/649x, ATtiny25/45/85.
+	* doc/avrdude.texi: (Ditto.)
+
 2005-08-17  Joerg Wunsch <j@uriah.heep.sax.de>
 
 	* avrdude.conf.in: fix the EEPROM size for ATmega329x/649x.
